classDiagram
  class ListProxyBuilder {
    TIMEOUT : int
  }
  class ProxyBuilder {
    logger : RootLogger, NoneType, Logger
    request_timeout : Optional[int]
    url : Optional[str]
    get_proxies() List[str]
  }
  class ProxyHandler {
    PROXY_MAX_USES : int
    lock : lock
    logger : RootLogger, Logger, NoneType
    proxy_builders : List[ProxyBuilder], list
    proxy_list : List[str], list
    proxy_max_uses : int
    proxy_uses : dict
    get_next_proxy() Union[str, None]
  }
  class RequestHandler {
    PARALLEL_WORKERS : int
    jobs_queue : Queue
    logger : RootLogger, Logger, NoneType
    num_workers : int
    workers : List[RequestWorker]
    do_request(job: RequestJob)
    do_requests(request_jobs: List[RequestJob], num_workers: int, progress_bar: Optional[tqdm.tqdm]) List[RequestJob]
  }
  class RequestJob {
    FINALIZE_KEY : str
    key : object
    params : Optional[Dict[str, str]]
    response : Response, Optional[requests.Response]
    url : Optional[str]
    end_job_signal() RequestJob
    set_response(job_response: requests.Response)
  }
  class RequestWorker {
    RETRIES : int
    RETRY_DELAY : int
    TIMEOUT : int
    jobs_queue : Queue
    logger : RootLogger, Logger, NoneType
    my_jobs : list
    progress_bar : Optional[tqdm.tqdm]
    proxy_handler
    stopped : bool
    user_agent_handler
    worker_id : int
    run()
  }
  class SSLProxiesBuilder {
  }
  class UserAgentHandler {
    DATA_FILE
    DATA_FILE : str
    USERAGENTSTRING_URL : str
    lock : lock
    logger : Logger, NoneType, RootLogger
    useragents_list : List[str]
    useragents_list : list
    get_next_useragent() str
  }
  ListProxyBuilder --|> ProxyBuilder
  SSLProxiesBuilder --|> ProxyBuilder
  ProxyHandler --* RequestWorker : proxy_handler
  UserAgentHandler --* RequestWorker : user_agent_handler
